# blog

./: .gitignore  config.yaml  pyproject.toml
.github/workflows/: deploy.yml
.rodney/chrome-data/: DevToolsActivePort  Local State
.rodney/chrome-data/CertificateRevocation/10373/: manifest.fingerprint
.rodney/chrome-data/CertificateRevocation/10384/: manifest.fingerprint
.rodney/chrome-data/Default/: BrowsingTopicsState  DIPS  History  Network Action Predictor  Network Persistent State  Preferences  Secure Preferences  Top Sites  TransportSecurity  Visited Links  Web Data
.rodney/chrome-data/Default/DawnGraphiteCache/: data_1  index
.rodney/chrome-data/Default/DawnWebGPUCache/: data_1  index
.rodney/chrome-data/Default/Extension Rules/: LOG
.rodney/chrome-data/GrShaderCache/: data_1  index
.rodney/chrome-data/GraphiteDawnCache/: data_1  index
.rodney/chrome-data/ShaderCache/: data_1  index
.rodney/chrome-data/segmentation_platform/: ukm_db-wal
content/pages/: about.md
content/posts/: 2026-02-10-framework-benchmark.md  2026-02-10-hello-world.md  2026-02-10-til-uv-native-tls.md  2026-02-19-your-framework-may-not-matter.md  2026-02-27-faster-python.md  2026-03-05-test-deploy.md  2026-03-05-zig-cc-cython.md  2026-03-06-optimization-ladder.md  2026-03-10-optimization-ladder.md  2026-05-07-omnivoice-surprisingly-good.md
src/blog/: build.py  cli.py  feed.py  models.py  server.py
static/: robots.txt  style.css
templates/: archive.html  base.html  index.html  page.html  post.html  tag.html  tags_index.html
(+43 files in other folders)
