[project]
name = "blog"
version = "0.1.0"
description = "Minimal static blog generator"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "pygments>=2.17",
    "pyyaml>=6.0",
    "watchdog>=4.0",
]

[project.scripts]
blog = "blog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
